CSS hover, active, opacity

--- a/buttons.html
+++ b/buttons.html
@@ -11,6 +11,16 @@
         /* spaces */
     }
 
+    .subscribe-button:hover {
+        /* pseudo-class */
+        opacity: 0.8;
+    }
+
+    .subscribe-button:active {
+        /* pseudo-class, after click*/
+        opacity: 0.5;
+    }
+
     .join-button {
         background-color: white;
         color: blue;
@@ -21,6 +31,17 @@
         border-style: solid;
         cursor: pointer;
         border-width: 1px;
+    }
+
+    .join-button:hover {
+        /* pseudo-class */
+        background-color: blue;
+        color: white;
+    }
+
+    .join-button:active {
+        /* pseudo-class, after click*/
+        opacity: 0.5;
     }
 
     .tweet-button {
