--- a/buttons.html
+++ b/buttons.html
@@ -9,6 +9,7 @@
         cursor: pointer;
         margin-right: 10px;
         /* spaces */
+        transition: opacity 0.15s;
     }
 
     .subscribe-button:hover {
@@ -31,6 +32,7 @@
         border-style: solid;
         cursor: pointer;
         border-width: 1px;
+        transition: background-color 1s, color 1s;
     }
 
     .join-button:hover {
