--- a/buttons.html
+++ b/buttons.html
@@ -2,14 +2,16 @@
     .subscribe-button {
         background-color: rgb(200, 0, 0);
         color: white;
-        height: 35px;
-        width: 100px;
         border: none;
         border-radius: 2px;
         cursor: pointer;
         margin-right: 10px;
         /* spaces */
         transition: opacity 0.15s;
+        padding-left: 10px;
+        padding-right: 10px;
+        padding-top: 10px;
+        padding-bottom: 10px;
     }
 
     .subscribe-button:hover {
@@ -26,8 +28,10 @@
     .join-button {
         background-color: white;
         color: blue;
-        height: 35px;
-        width: 60px;
+        padding-left: 10px;
+        padding-right: 10px;
+        padding-top: 9px;
+        padding-bottom: 9px;
         border-radius: 2px;
         border-color: blue;
         border-style: solid;
