--- a/buttons.html
+++ b/buttons.html
@@ -1,83 +1,23 @@
-<style>
-    .subscribe-button {
-        background-color: rgb(200, 0, 0);
-        color: white;
-        border: none;
-        border-radius: 2px;
-        cursor: pointer;
-        margin-right: 10px;
-        /* spaces */
-        transition: opacity 0.15s;
-        padding-left: 10px;
-        padding-right: 10px;
-        padding-top: 10px;
-        padding-bottom: 10px;
-    }
+<!DOCTYPE html>
+<html>
 
-    .subscribe-button:hover {
-        /* pseudo-class */
-        opacity: 0.8;
-        /* makes lighter */
-    }
+<head>
+    <title> Button Practice</title>
+    <link rel="stylesheet" href="styles/buttons.css">
+</head>
 
-    .subscribe-button:active {
-        /* pseudo-class, after click*/
-        opacity: 0.5;
-    }
+<body>
+    <button class="subscribe-button">
+        SUBSCRIBE
+    </button>
 
-    .join-button {
-        background-color: white;
-        color: blue;
-        padding-left: 10px;
-        padding-right: 10px;
-        padding-top: 9px;
-        padding-bottom: 9px;
-        border-radius: 2px;
-        border-color: blue;
-        border-style: solid;
-        cursor: pointer;
-        border-width: 1px;
-        transition: background-color 0.15s, color 0.15s;
-    }
+    <button class="join-button">
+        JOIN
+    </button>
 
-    .join-button:hover {
-        /* pseudo-class */
-        background-color: blue;
-        color: white;
-    }
+    <button class="tweet-button">
+        TWEET
+    </button>
+</body>
 
-    .join-button:active {
-        /* pseudo-class, after click*/
-        opacity: 0.5;
-    }
-
-    .tweet-button {
-        background-color: blue;
-        color: white;
-        height: 35px;
-        width: 70px;
-        border-radius: 18px;
-        border: none;
-        cursor: pointer;
-        margin-left: 10px;
-        font-weight: bold;
-        font-size: 15px;
-        transition: box-shadow 0.15s;
-    }
-
-    .tweet-button:hover {
-        box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.15);
-    }
-</style>
-
-<button class="subscribe-button">
-    SUBSCRIBE
-</button>
-
-<button class="join-button">
-    JOIN
-</button>
-
-<button class="tweet-button">
-    TWEET
-</button>
+</html>
