--- a/youtube.html
+++ b/youtube.html
@@ -8,7 +8,7 @@
             width: 300px;
             height: 300px;
             object-fit: contain;
-            object-position: left;
+            object-position: right;
             border-width: 2px;
             border-style: solid;
             border-color: red;
@@ -18,6 +18,7 @@
 
 <body>
     <img src="thumbnails/thumbnail-1.webp" class="thumbnail">
+    <input type="text" placeholder="Search">
 </body>
 
 </html>
