--- a/youtube.html
+++ b/youtube.html
@@ -13,12 +13,14 @@
             border-style: solid;
             border-color: red;
         }
+
+        .search-bar {}
     </style>
 </head>
 
 <body>
     <img src="thumbnails/thumbnail-1.webp" class="thumbnail">
-    <input type="text" placeholder="Search">
+    <input class="search-bar" type="text" placeholder="Search">
 </body>
 
 </html>
