--- a/intro-to-html/exercises/exercise-07.html
+++ b/intro-to-html/exercises/exercise-07.html
@@ -15,6 +15,7 @@
             margin-top: 50px;
             object-fit: cover;
             object-position: center;
+            border-radius: 250px;
         }
     </style>
 </head>
