Excercise 07: search box, round, with shadow

--- a/intro-to-html/exercises/exercise-07.html
+++ b/intro-to-html/exercises/exercise-07.html
@@ -5,23 +5,25 @@
 <head>
     <title>Cat Exercise</title>
     <style>
-        * {
-            text-align: center;
-        }
-
-        .cat-img {
+        .search-google {
+            font-size: 20px;
             width: 500px;
-            height: 500px;
-            margin-top: 50px;
-            object-fit: cover;
-            object-position: center;
-            border-radius: 250px;
+            border: none;
+            padding-right: 80px;
+            padding-left: 10px;
+            margin-top: 10px;
+            padding-top: 10px;
+            margin-left: 10px;
+            padding-bottom: 10px;
+            box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.25);
+            border-radius: 30px;
         }
     </style>
 </head>
 
 <body>
-    <img class="cat-img" src="cat.jpg">
+
 </body>
+<input class="search-google" type="text" placeholder="Search Google or type a URL">
 
 </html>
