--- a/intro-to-html/exercises/exercise-07.html
+++ b/intro-to-html/exercises/exercise-07.html
@@ -5,18 +5,40 @@
 <head>
     <title>Cat Exercise</title>
     <style>
-        .search-google {
-            font-size: 20px;
-            width: 500px;
-            border: none;
-            padding-right: 80px;
-            padding-left: 10px;
+        * {
             margin-top: 10px;
-            padding-top: 10px;
+            margin-left: 50px;
+            vertical-align: middle;
+        }
+
+        .cat-pic {
+            width: 50px;
+            height: 50px;
+            object-fit: cover;
+            object-position: center;
+            border-radius: 25px;
+        }
+
+        .text-box {
+            font-size: 20px;
+            width: 200px;
+            border: none;
             margin-left: 10px;
-            padding-bottom: 10px;
-            box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.25);
+        }
+
+        .btn {
+            color: white;
+            background-color: rgb(29, 155, 240);
+            border: none;
             border-radius: 30px;
+            padding-left: 20px;
+            padding-right: 20px;
+            padding-top: 10px;
+            padding-bottom: 10px;
+            cursor: pointer;
+            margin-left: 10px;
+            font-size: 16px;
+            font-weight: bold;
         }
     </style>
 </head>
@@ -24,6 +46,10 @@
 <body>
 
 </body>
-<input class="search-google" type="text" placeholder="Search Google or type a URL">
+<img class="cat-pic" src="cat.jpg">
+<input class="text-box" type="text" placeholder="What's happening?">
+<button class="btn">
+    Tweet
+</button>
 
 </html>
