Inline-block element, by default block element

--- a/youtube.html
+++ b/youtube.html
@@ -15,12 +15,26 @@
         }
 
         .search-bar {}
+
+        .vid-author,
+        .vid-stats {
+            display: inline-block;
+        }
     </style>
 </head>
 
 <body>
     <img src="thumbnails/thumbnail-1.webp" class="thumbnail">
     <input class="search-bar" type="text" placeholder="Search">
+    <p class="vid-title">
+        Talking Tech and AI with Google CEO!
+    </p>
+    <p class="vid-author">
+        Marques Brownlee
+    </p>
+    <p class="vid-stats">
+        3.4M views &#183; 6 months ago
+    </p>
 </body>
 
 </html>
