--- a/youtube.html
+++ b/youtube.html
@@ -6,26 +6,19 @@
     <style>
         .thumbnail {
             width: 300px;
-            height: 300px;
             object-fit: contain;
-            object-position: right;
-            border-width: 2px;
-            border-style: solid;
-            border-color: red;
+            object-position: center;
+            display: block;
         }
 
         .search-bar {}
-
-        .vid-author,
-        .vid-stats {
-            display: inline-block;
-        }
     </style>
 </head>
 
 <body>
-    <img src="thumbnails/thumbnail-1.webp" class="thumbnail">
     <input class="search-bar" type="text" placeholder="Search">
+    <img src="thumbnails/thumbnail-1.webp" class="thumbnail">
+
     <p class="vid-title">
         Talking Tech and AI with Google CEO!
     </p>
