Intro to container: div

--- a/youtube.html
+++ b/youtube.html
@@ -17,17 +17,20 @@
 
 <body>
     <input class="search-bar" type="text" placeholder="Search">
-    <img src="thumbnails/thumbnail-1.webp" class="thumbnail">
 
-    <p class="vid-title">
-        Talking Tech and AI with Google CEO!
-    </p>
-    <p class="vid-author">
-        Marques Brownlee
-    </p>
-    <p class="vid-stats">
-        3.4M views &#183; 6 months ago
-    </p>
+    <div class="vid-preview">
+        <img src="thumbnails/thumbnail-1.webp" class="thumbnail">
+        <p class="vid-title">
+            Talking Tech and AI with Google CEO!
+        </p>
+        <p class="vid-author">
+            Marques Brownlee
+        </p>
+        <p class="vid-stats">
+            3.4M views &#183; 6 months ago
+        </p>
+    </div>
+
 </body>
 
 </html>
