--- a/youtube.html
+++ b/youtube.html
@@ -8,10 +8,18 @@
             width: 300px;
             object-fit: contain;
             object-position: center;
+        }
+
+        .search-bar {
             display: block;
         }
 
-        .search-bar {}
+        .vid-preview {
+            display: inline-block;
+            vertical-align: top;
+            width: 300px;
+            margin-right: 15px;
+        }
     </style>
 </head>
 
@@ -28,6 +36,19 @@
         </p>
         <p class="vid-stats">
             3.4M views &#183; 6 months ago
+        </p>
+    </div>
+
+    <div class="vid-preview">
+        <img src="thumbnails/thumbnail-2.webp" class="thumbnail">
+        <p class="vid-title">
+            Try Not To Laugh Challenge #9
+        </p>
+        <p class="vid-author">
+            Markiplier
+        </p>
+        <p class="vid-stats">
+            19M views &#183; 4 years ago
         </p>
     </div>
 
