--- a/intro-to-html/exercises/exercise-09.html
+++ b/intro-to-html/exercises/exercise-09.html
@@ -8,7 +8,8 @@
             height: 300px;
             margin-left: 20px;
             margin-top: 30px;
-            background-color: red;
+            background-color: green;
+            border-radius: 150px;
         }
     </style>
 </head>
