--- a/intro-to-html/exercises/exercise-09.html
+++ b/intro-to-html/exercises/exercise-09.html
@@ -3,19 +3,96 @@
 
 <head>
     <style>
-        .practice {
-            width: 300px;
-            height: 300px;
+        * {
+            font-family: Arial;
+        }
+
+        .fb-card {
+            display: inline-block;
+            width: 125px;
+            /* height: 150px; */
             margin-left: 20px;
             margin-top: 30px;
-            background-color: green;
-            border-radius: 150px;
+            box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.4);
+        }
+
+        .cat-img {
+            width: 125px;
+            height: 100px;
+            object-fit: cover;
+            object-position: center;
+        }
+
+        p {
+            margin-left: 5px;
+            margin-bottom: 0px;
+        }
+
+        .name {
+            font-weight: bold;
+            margin-top: 5px;
+        }
+
+        .mf {
+            font-size: 12px;
+            margin-top: 5px;
+            color: gray;
+        }
+
+        button {
+            margin-top: 7px;
+            margin-bottom: 7px;
+            margin-left: 5px;
+            color: white;
+            background-color: blue;
+            padding-left: 10px;
+            padding-right: 10px;
+            padding-top: 8px;
+            padding-bottom: 8px;
+            border: none;
+            border-radius: 3px;
+            cursor: pointer;
         }
     </style>
 </head>
 
 <body>
-    <div class="practice"></div>
+    <div class="fb-card">
+        <img src="cat.jpg" class="cat-img">
+        <p class="name">
+            Oliver
+        </p>
+        <p class="mf">
+            2 mutual friends
+        </p>
+        <button>
+            Add Friend
+        </button>
+    </div>
+    <div class="fb-card">
+        <img src="cat.jpg" class="cat-img">
+        <p class="name">
+            Oliver 1
+        </p>
+        <p class="mf">
+            4 mutual friends
+        </p>
+        <button>
+            Add Friend
+        </button>
+    </div>
+    <div class="fb-card">
+        <img src="cat.jpg" class="cat-img">
+        <p class="name">
+            Oliver 2
+        </p>
+        <p class="mf">
+            8 mutual friends
+        </p>
+        <button>
+            Add Friend
+        </button>
+    </div>
 </body>
 
 </html>
