--- a/intro-to-html/exercises/exercise-09.html
+++ b/intro-to-html/exercises/exercise-09.html
@@ -36,7 +36,7 @@
         .mf {
             font-size: 12px;
             margin-top: 5px;
-            color: gray;
+            color: rgb(100, 100, 100);
         }
 
         button {
@@ -44,7 +44,7 @@
             margin-bottom: 7px;
             margin-left: 5px;
             color: white;
-            background-color: blue;
+            background-color: rgb(24, 119, 242);
             padding-left: 10px;
             padding-right: 10px;
             padding-top: 8px;
@@ -52,6 +52,7 @@
             border: none;
             border-radius: 3px;
             cursor: pointer;
+            font-size: 16px;
         }
     </style>
 </head>
