Resizing font-weight with number like 500, med bold

--- a/youtube.html
+++ b/youtube.html
@@ -31,6 +31,8 @@
 
         .vid-title {
             margin-top: 0px;
+            font-size: 14px;
+            font-weight: 500;
         }
 
         .channel-picture {
