--- a/youtube.html
+++ b/youtube.html
@@ -10,6 +10,8 @@
     <style>
         p {
             font-family: Roboto, Arial;
+            margin-top: 0;
+            margin-bottom: 0;
         }
 
         .search-bar {
@@ -30,9 +32,10 @@
         }
 
         .vid-title {
-            margin-top: 0px;
             font-size: 14px;
             font-weight: 500;
+            line-height: 15px;
+            margin-bottom: 12px;
         }
 
         .channel-picture {
@@ -53,6 +56,17 @@
 
         .thumbnail-row {
             margin-bottom: 10px;
+        }
+
+        .vid-author {
+            font-size: 12px;
+            color: rgb(96, 96, 96);
+            margin-bottom: 4px;
+        }
+
+        .vid-stats {
+            font-size: 12px;
+            color: rgb(96, 96, 96);
         }
     </style>
 </head>
@@ -83,16 +97,25 @@
     </div>
 
     <div class="vid-preview">
-        <img src="thumbnails/thumbnail-2.webp" class="thumbnail">
-        <p class="vid-title">
-            Try Not To Laugh Challenge #9
-        </p>
-        <p class="vid-author">
-            Markiplier
-        </p>
-        <p class="vid-stats">
-            19M views &#183; 4 years ago
-        </p>
+        <div class="thumbnail-row"> <!-- first vertical layout -->
+            <img src="thumbnails/thumbnail-2.webp" class="thumbnail">
+        </div>
+        <div> <!-- second vertical layout -->
+            <div class="channel-picture"> <!-- first horizontal layout -->
+                <img class="profile-picture" src="channel-pictures/channel-2.jpeg">
+            </div>
+            <div class="vid-info"> <!-- second horizontal layout -->
+                <p class="vid-title">
+                    Try Not To Laugh #9
+                </p>
+                <p class="vid-author">
+                    Markiplier
+                </p>
+                <p class="vid-stats">
+                    19M views &#183; 4 years ago
+                </p>
+            </div>
+        </div>
     </div>
 
 </body>
