--- a/grid.html
+++ b/grid.html
@@ -18,6 +18,19 @@
             <p>text</p>
         </div>
     </div>
+
+    <div style="
+        margin-top: 30px;
+        display: grid;
+        grid-template-columns: 100px 1fr;
+    ">
+        <div style="background-color: lightblue;">
+            100px
+        </div>
+        <div style="background-color: lightpink;">
+            1fr
+        </div>
+    </div>
 </body>
 
 </html>
