--- a/grid.html
+++ b/grid.html
@@ -31,6 +31,22 @@
             1fr
         </div>
     </div>
+
+    <div style="
+            margin-top: 30px;
+            display: grid;
+            grid-template-columns: 100px 1fr 2fr;
+        ">
+        <div style="background-color: lightblue;">
+            100px
+        </div>
+        <div style="background-color: lightpink;">
+            1fr
+        </div>
+        <div style="background-color: lightgreen;">
+            2fr
+        </div>
+    </div>
 </body>
 
 </html>
