--- a/grid.html
+++ b/grid.html
@@ -5,7 +5,7 @@
     <title>Grid Practice</title>
 </head>
 
-<body>
+<body style="padding-bottom: 1000px;">
     <div style="
         display: grid;
         grid-template-columns: 100px 100px;
