--- a/grid.html
+++ b/grid.html
@@ -47,6 +47,23 @@
             2fr
         </div>
     </div>
+
+    <div style="
+            margin-top: 30px;
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr;
+            height: 100px;
+        ">
+        <div style="background-color: lightblue;">
+            1fr
+        </div>
+        <div style="background-color: lightpink;">
+            1fr
+        </div>
+        <div style="background-color: lightgreen;">
+            1fr
+        </div>
+    </div>
 </body>
 
 </html>
