--- a/grid.html
+++ b/grid.html
@@ -53,6 +53,8 @@
             display: grid;
             grid-template-columns: 1fr 1fr 1fr;
             height: 100px;
+            column-gap: 20px;
+            row-gap: 30px;
         ">
         <div style="background-color: lightblue;">
             1fr
@@ -61,6 +63,15 @@
             1fr
         </div>
         <div style="background-color: lightgreen;">
+            1fr
+        </div>
+        <div style="background-color: lightgreen;">
+            1fr
+        </div>
+        <div style="background-color: lightblue;">
+            1fr
+        </div>
+        <div style="background-color: lightpink;">
             1fr
         </div>
     </div>
