--- a/youtube.html
+++ b/youtube.html
@@ -18,17 +18,16 @@
             display: block;
         }
 
+        .vid-grid {
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr;
+            column-gap: 16px;
+            row-gap: 40px;
+        }
+
         .thumbnail {
             width: 100%;
             object-fit: contain;
-            object-position: center;
-        }
-
-        .vid-preview {
-            display: inline-block;
-            vertical-align: top;
-            width: 300px;
-            margin-right: 5px;
         }
 
         .vid-title {
@@ -65,49 +64,139 @@
     </style>
 </head>
 
-<body>
+<body style="padding-bottom: 100px;">
     <input class="search-bar" type="text" placeholder="Search">
 
-    <div class="vid-preview">
-        <div class="thumbnail-row"> <!-- first vertical layout -->
-            <img src="thumbnails/thumbnail-1.webp" class="thumbnail">
-        </div>
-        <div class="vid-info-grid"> <!-- second vertical layout -->
-            <div class="channel-picture"> <!-- first horizontal layout -->
-                <img class="profile-picture" src="channel-pictures/channel-1.jpeg">
+    <div class="vid-grid">
+        <div class="vid-preview">
+            <div class="thumbnail-row"> <!-- first vertical layout -->
+                <img src="thumbnails/thumbnail-1.webp" class="thumbnail">
             </div>
-            <div class="vid-info"> <!-- second horizontal layout -->
-                <p class="vid-title">
-                    Talking Tech and AI with Google CEO!
-                </p>
-                <p class="vid-author">
-                    Marques Brownlee
-                </p>
-                <p class="vid-stats">
-                    3.4M views &#183; 6 months ago
-                </p>
+            <div class="vid-info-grid"> <!-- second vertical layout -->
+                <div class="channel-picture"> <!-- first horizontal layout -->
+                    <img class="profile-picture" src="channel-pictures/channel-1.jpeg">
+                </div>
+                <div class="vid-info"> <!-- second horizontal layout -->
+                    <p class="vid-title">
+                        Talking Tech and AI with Google CEO!
+                    </p>
+                    <p class="vid-author">
+                        Marques Brownlee
+                    </p>
+                    <p class="vid-stats">
+                        3.4M views &#183; 6 months ago
+                    </p>
+                </div>
             </div>
         </div>
-    </div>
 
-    <div class="vid-preview">
-        <div class="thumbnail-row"> <!-- first vertical layout -->
-            <img src="thumbnails/thumbnail-2.webp" class="thumbnail">
-        </div>
-        <div class="vid-info-grid"> <!-- second vertical layout -->
-            <div class="channel-picture"> <!-- first horizontal layout -->
-                <img class="profile-picture" src="channel-pictures/channel-2.jpeg">
+        <div class="vid-preview">
+            <div class="thumbnail-row"> <!-- first vertical layout -->
+                <img src="thumbnails/thumbnail-2.webp" class="thumbnail">
             </div>
-            <div class="vid-info"> <!-- second horizontal layout -->
-                <p class="vid-title">
-                    Try Not To Laugh #9
-                </p>
-                <p class="vid-author">
-                    Markiplier
-                </p>
-                <p class="vid-stats">
-                    19M views &#183; 4 years ago
-                </p>
+            <div class="vid-info-grid"> <!-- second vertical layout -->
+                <div class="channel-picture"> <!-- first horizontal layout -->
+                    <img class="profile-picture" src="channel-pictures/channel-2.jpeg">
+                </div>
+                <div class="vid-info"> <!-- second horizontal layout -->
+                    <p class="vid-title">
+                        Try Not To Laugh #9
+                    </p>
+                    <p class="vid-author">
+                        Markiplier
+                    </p>
+                    <p class="vid-stats">
+                        19M views &#183; 4 years ago
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="vid-preview">
+            <div class="thumbnail-row"> <!-- first vertical layout -->
+                <img src="thumbnails/thumbnail-4.webp" class="thumbnail">
+            </div>
+            <div class="vid-info-grid"> <!-- second vertical layout -->
+                <div class="channel-picture"> <!-- first horizontal layout -->
+                    <img class="profile-picture" src="channel-pictures/channel-4.jpeg">
+                </div>
+                <div class="vid-info"> <!-- second horizontal layout -->
+                    <p class="vid-title">
+                        The Simplest Math Problem No One Can Solve - Collatz Conjecture
+                    </p>
+                    <p class="vid-author">
+                        Veritasium
+                    </p>
+                    <p class="vid-stats">
+                        18M views &#183; 4 months ago
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="vid-preview">
+            <div class="thumbnail-row"> <!-- first vertical layout -->
+                <img src="thumbnails/thumbnail-4.webp" class="thumbnail">
+            </div>
+            <div class="vid-info-grid"> <!-- second vertical layout -->
+                <div class="channel-picture"> <!-- first horizontal layout -->
+                    <img class="profile-picture" src="channel-pictures/channel-4.jpeg">
+                </div>
+                <div class="vid-info"> <!-- second horizontal layout -->
+                    <p class="vid-title">
+                        The Simplest Math Problem No One Can Solve - Collatz Conjecture
+                    </p>
+                    <p class="vid-author">
+                        Veritasium
+                    </p>
+                    <p class="vid-stats">
+                        18M views &#183; 4 months ago
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="vid-preview">
+            <div class="thumbnail-row"> <!-- first vertical layout -->
+                <img src="thumbnails/thumbnail-5.webp" class="thumbnail">
+            </div>
+            <div class="vid-info-grid"> <!-- second vertical layout -->
+                <div class="channel-picture"> <!-- first horizontal layout -->
+                    <img class="profile-picture" src="channel-pictures/channel-5.jpeg">
+                </div>
+                <div class="vid-info"> <!-- second horizontal layout -->
+                    <p class="vid-title">
+                        Kadane's Algorithm to Maximum Sum Subarray Problem
+                    </p>
+                    <p class="vid-author">
+                        CS Dojo
+                    </p>
+                    <p class="vid-stats">
+                        519K views &#183; 5 years ago
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="vid-preview">
+            <div class="thumbnail-row"> <!-- first vertical layout -->
+                <img src="thumbnails/thumbnail-6.webp" class="thumbnail">
+            </div>
+            <div class="vid-info-grid"> <!-- second vertical layout -->
+                <div class="channel-picture"> <!-- first horizontal layout -->
+                    <img class="profile-picture" src="channel-pictures/channel-6.jpeg">
+                </div>
+                <div class="vid-info"> <!-- second horizontal layout -->
+                    <p class="vid-title">
+                        Anything You Can Fit In The Circle I’ll Pay For
+                    </p>
+                    <p class="vid-author">
+                        MrBeast
+                    </p>
+                    <p class="vid-stats">
+                        141M views &#183; 1 year ago
+                    </p>
+                </div>
             </div>
         </div>
     </div>
