--- a/flexbox.html
+++ b/flexbox.html
@@ -17,6 +17,23 @@
             div 2
         </div>
     </div>
+
+    <div style="
+            margin-top: 30px;
+            display: flex;
+            flex-direction: row;
+        ">
+        <div style="background-color: lightblue;
+            width: 100px;
+        ">
+            100px
+        </div>
+        <div style="background-color: lightpink;
+            flex: 1;
+        ">
+            flex: 1
+        </div>
+    </div>
 </body>
 
 </html>
