--- a/flexbox.html
+++ b/flexbox.html
@@ -5,7 +5,7 @@
     <title>Flexbox Practice</title>
 </head>
 
-<body>
+<body style="padding-bottom: 1000px;">
     <div style="
         display: flex;
         flex-direction: row;
@@ -32,6 +32,34 @@
             flex: 1;
         ">
             flex: 1
+        </div>
+    </div>
+
+    <div style="
+            margin-top: 30px;
+            display: flex;
+            flex-direction: row;
+            border-style: solid;
+            border-width: 1px;
+            border-color: gray;
+            height: 100px;
+
+            justify-content: center;
+        ">
+        <div style="background-color: lightblue;
+            width: 100px;
+        ">
+            100px
+        </div>
+        <div style="background-color: lightpink;
+            width: 100px;
+        ">
+            100px
+        </div>
+        <div style="background-color: lightblue;
+                width: 100px;
+            ">
+            100px
         </div>
     </div>
 </body>
