--- a/flexbox.html
+++ b/flexbox.html
@@ -90,6 +90,35 @@
             100px
         </div>
     </div>
+
+    <div style="
+                margin-top: 30px;
+                display: flex;
+                flex-direction: row;
+                border-style: solid;
+                border-width: 1px;
+                border-color: gray;
+                height: 100px;
+    
+                justify-content: space-between;
+                align-items: center;
+            ">
+        <div style="background-color: lightblue;
+                width: 100px;
+            ">
+            100px
+        </div>
+        <div style="background-color: lightpink;
+                width: 100px;
+            ">
+            100px
+        </div>
+        <div style="background-color: lightblue;
+                    width: 100px;
+                ">
+            100px
+        </div>
+    </div>
 </body>
 
 </html>
