--- a/youtube.html
+++ b/youtube.html
@@ -7,61 +7,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <style>
-        p {
-            font-family: Roboto, Arial;
-            margin-top: 0;
-            margin-bottom: 0;
-        }
-
-        .search-bar {
-            display: block;
-        }
-
-        .vid-grid {
-            display: grid;
-            grid-template-columns: 1fr 1fr 1fr;
-            column-gap: 16px;
-            row-gap: 40px;
-        }
-
-        .thumbnail {
-            width: 100%;
-            object-fit: contain;
-        }
-
-        .vid-title {
-            font-size: 14px;
-            font-weight: 500;
-            line-height: 15px;
-            margin-bottom: 12px;
-        }
-
-        .vid-info-grid {
-            display: grid;
-            grid-template-columns: 50px 1fr;
-        }
-
-        .profile-picture {
-            width: 40px;
-            border-radius: 50px;
-        }
-
-        .thumbnail-row {
-            margin-bottom: 10px;
-        }
-
-        .vid-author {
-            font-size: 12px;
-            color: rgb(96, 96, 96);
-            margin-bottom: 4px;
-        }
-
-        .vid-stats {
-            font-size: 12px;
-            color: rgb(96, 96, 96);
-        }
-    </style>
+    <link rel="stylesheet" href="styles/general.css">
+    <link rel="stylesheet" href="styles/header.css">
+    <link rel="stylesheet" href="styles/video.css">
 </head>
 
 <body style="padding-bottom: 100px;">
