Flex: responsive layout, Youtube clone header initialization

--- a/youtube.html
+++ b/youtube.html
@@ -12,8 +12,14 @@
     <link rel="stylesheet" href="styles/video.css">
 </head>
 
-<body style="padding-bottom: 100px;">
-    <input class="search-bar" type="text" placeholder="Search">
+<body style="padding-bottom: 1000px;">
+    <div class="header">
+        <div class="left-section"> left-section </div>
+        <div class="middle-section">
+            <input class="search-bar" type="text" placeholder="Search">
+        </div>
+        <div class="right-section"> right-section </div>
+    </div>
 
     <div class="vid-grid">
         <div class="vid-preview">
