--- a/youtube.html
+++ b/youtube.html
@@ -14,7 +14,10 @@
 
 <body style="padding-bottom: 1000px;">
     <div class="header">
-        <div class="left-section"> left-section </div>
+        <div class="left-section">
+            <img class="hamburger-menu" src="icons/hamburger-menu.svg">
+            <img class="youtube-logo" src="icons/youtube-logo.svg">
+        </div>
         <div class="middle-section">
             <input class="search-bar" type="text" placeholder="Search">
         </div>
