--- a/youtube.html
+++ b/youtube.html
@@ -24,10 +24,15 @@
                 <img class="search-icon" src="icons/search.svg">
             </button>
             <button class="voice-search-button">
-                <img src="icons/voice-search-icon.svg">
+                <img class="voice-search-icon" src="icons/voice-search-icon.svg">
             </button>
         </div>
-        <div class="right-section"> right-section </div>
+        <div class="right-section">
+            <img class="upload-icon" src="icons/upload.svg">
+            <img class="youtube-apps-icon" src="icons/youtube-apps.svg">
+            <img class="notifications-icon" src="icons/notifications.svg">
+            <img class="current-user-icon" src="channel-pictures/my-channel.jpeg">
+        </div>
     </div>
 
     <div class="vid-grid">
