New style of margin: top, left...

--- a/position.html
+++ b/position.html
@@ -11,6 +11,8 @@
             background-color: black;
             color: white;
             position: fixed;
+            top: 10px;
+            left: 50px;
         ">
         header
     </div>
