--- a/position.html
+++ b/position.html
@@ -13,6 +13,7 @@
             position: fixed;
             top: 10px;
             left: 50px;
+            right: 50px;
         ">
         header
     </div>
