--- a/position.html
+++ b/position.html
@@ -6,14 +6,18 @@
     <title> Position Practice </title>
 </head>
 
-<body style="height: 3000px">
+<body style="
+    height: 3000px;
+    padding-top: 60px;
+">
     <div style="
             background-color: black;
             color: white;
             position: fixed;
-            top: 10px;
-            left: 50px;
-            right: 50px;
+            top: 0;
+            left: 0;
+            right: 0;
+            height: 50px;
         ">
         header
     </div>
