Exercise 14: better solution using padding

--- a/exercises/exercise-14.html
+++ b/exercises/exercise-14.html
@@ -32,24 +32,21 @@
             border-radius: 15px;
             width: 500px;
             height: 150px;
+            padding-bottom: 15px;
+            padding-top: 15px;
+            padding-right: 15px;
+            padding-left: 15px;
         }
 
         .title {
             font-size: 30px;
             font-weight: bold;
-            margin-left: 20px;
-            margin-top: 20px;
             margin-bottom: 10px;
         }
 
         .description {
-            margin-left: 20px;
-            margin-bottom: 8px;
             font-size: 20px;
-        }
-
-        .close-btn {
-            margin-left: 20px;
+            margin-bottom: 10px;
         }
     </style>
 </head>
