--- a/position.html
+++ b/position.html
@@ -39,6 +39,8 @@
         position: absolute;
         background-color: red;
         color: white;
+        top:0;
+        left:0;
     ">
         absolute
     </div>
