Position absolute: position based on parent content

--- a/position.html
+++ b/position.html
@@ -19,7 +19,7 @@
             left: 0;
             right: 0;
             height: 50px;
-            z-index: 1;
+            z-index: 100;
         ">
         header
     </div>
@@ -34,6 +34,15 @@
         width: 72px;
     ">
         sidebar
+        <div style="
+                position: absolute;
+                background-color: red;
+                color: white;
+                top:0;
+                right:0;
+            ">
+            x
+        </div>
     </div>
 
     <div style="
@@ -41,8 +50,7 @@
         background-color: red;
         color: white;
         top:60px;
-        right:0;
-        /* z-index: 2; */
+        right:10px;
     ">
         absolute
     </div>
