Add vid-time (absolute, relative)

--- a/youtube.html
+++ b/youtube.html
@@ -44,6 +44,7 @@
         <div class="vid-preview">
             <div class="thumbnail-row"> <!-- first vertical layout -->
                 <img src="thumbnails/thumbnail-1.webp" class="thumbnail">
+                <div class="vid-time">14:20</div>
             </div>
             <div class="vid-info-grid"> <!-- second vertical layout -->
                 <div class="channel-picture"> <!-- first horizontal layout -->
