Exercise 16: video title to actual video link

--- a/youtube.html
+++ b/youtube.html
@@ -86,9 +86,11 @@
                     <img class="profile-picture" src="channel-pictures/channel-1.jpeg">
                 </div>
                 <div class="vid-info"> <!-- second horizontal layout -->
-                    <p class="vid-title">
-                        Talking Tech and AI with Google CEO!
-                    </p>
+                    <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY" target="_blank" class="video-title-link">
+                        <p class="vid-title">
+                            Talking Tech and AI with Google CEO!
+                        </p>
+                    </a>
                     <p class="vid-author">
                         Marques Brownlee
                     </p>
@@ -109,9 +111,11 @@
                     <img class="profile-picture" src="channel-pictures/channel-2.jpeg">
                 </div>
                 <div class="vid-info"> <!-- second horizontal layout -->
-                    <p class="vid-title">
-                        Try Not To Laugh #9
-                    </p>
+                    <a href="https://www.youtube.com/watch?v=mP0RAo9SKZk" target="_blank" class="video-title-link">
+                        <p class="vid-title">
+                            Try Not To Laugh #9
+                        </p>
+                    </a>
                     <p class="vid-author">
                         Markiplier
                     </p>
@@ -132,9 +136,11 @@
                     <img class="profile-picture" src="channel-pictures/channel-4.jpeg">
                 </div>
                 <div class="vid-info"> <!-- second horizontal layout -->
-                    <p class="vid-title">
-                        The Simplest Math Problem No One Can Solve - Collatz Conjecture
-                    </p>
+                    <a href="https://www.youtube.com/watch?v=094y1Z2wpJg" target="_blank" class="video-title-link">
+                        <p class="vid-title">
+                            The Simplest Math Problem No One Can Solve - Collatz Conjecture
+                        </p>
+                    </a>
                     <p class="vid-author">
                         Veritasium
                     </p>
@@ -155,9 +161,11 @@
                     <img class="profile-picture" src="channel-pictures/channel-4.jpeg">
                 </div>
                 <div class="vid-info"> <!-- second horizontal layout -->
-                    <p class="vid-title">
-                        The Simplest Math Problem No One Can Solve - Collatz Conjecture
-                    </p>
+                    <a href="https://www.youtube.com/watch?v=094y1Z2wpJg" target="_blank" class="video-title-link">
+                        <p class="vid-title">
+                            The Simplest Math Problem No One Can Solve - Collatz Conjecture
+                        </p>
+                    </a>
                     <p class="vid-author">
                         Veritasium
                     </p>
@@ -178,9 +186,11 @@
                     <img class="profile-picture" src="channel-pictures/channel-5.jpeg">
                 </div>
                 <div class="vid-info"> <!-- second horizontal layout -->
-                    <p class="vid-title">
-                        Kadane's Algorithm to Maximum Sum Subarray Problem
-                    </p>
+                    <a href="https://www.youtube.com/watch?v=86CQq3pKSUw" target="_blank" class="video-title-link">
+                        <p class="vid-title">
+                            Kadane's Algorithm to Maximum Sum Subarray Problem
+                        </p>
+                    </a>
                     <p class="vid-author">
                         CS Dojo
                     </p>
@@ -201,9 +211,11 @@
                     <img class="profile-picture" src="channel-pictures/channel-6.jpeg">
                 </div>
                 <div class="vid-info"> <!-- second horizontal layout -->
-                    <p class="vid-title">
-                        Anything You Can Fit In The Circle I’ll Pay For
-                    </p>
+                    <a href="https://www.youtube.com/watch?v=yXWw0_UfSFg" target="_blank" class="video-title-link">
+                        <p class="vid-title">
+                            Anything You Can Fit In The Circle I’ll Pay For
+                        </p>
+                    </a>
                     <p class="vid-author">
                         MrBeast
                     </p>
