Exercise 16: done adding all links

--- a/youtube.html
+++ b/youtube.html
@@ -78,12 +78,16 @@
     <div class="vid-grid">
         <div class="vid-preview">
             <div class="thumbnail-row"> <!-- first vertical layout -->
-                <img src="thumbnails/thumbnail-1.webp" class="thumbnail">
+                <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY" target="_blank" class="video-title-link">
+                    <img src="thumbnails/thumbnail-1.webp" class="thumbnail">
+                </a>
                 <div class="vid-time">14:20</div>
             </div>
             <div class="vid-info-grid"> <!-- second vertical layout -->
                 <div class="channel-picture"> <!-- first horizontal layout -->
-                    <img class="profile-picture" src="channel-pictures/channel-1.jpeg">
+                    <a href="https://www.youtube.com/c/mkbhd" target="_blank">
+                        <img class="profile-picture" src="channel-pictures/channel-1.jpeg">
+                    </a>
                 </div>
                 <div class="vid-info"> <!-- second horizontal layout -->
                     <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY" target="_blank" class="video-title-link">
@@ -103,12 +107,16 @@
 
         <div class="vid-preview">
             <div class="thumbnail-row"> <!-- first vertical layout -->
-                <img src="thumbnails/thumbnail-2.webp" class="thumbnail">
+                <a href="https://www.youtube.com/watch?v=mP0RAo9SKZk" target="_blank" class="video-title-link">
+                    <img src="thumbnails/thumbnail-2.webp" class="thumbnail">
+                </a>
                 <div class="vid-time">8:22</div>
             </div>
             <div class="vid-info-grid"> <!-- second vertical layout -->
                 <div class="channel-picture"> <!-- first horizontal layout -->
-                    <img class="profile-picture" src="channel-pictures/channel-2.jpeg">
+                    <a href="https://www.youtube.com/c/markiplier" target="_blank">
+                        <img class="profile-picture" src="channel-pictures/channel-2.jpeg">
+                    </a>
                 </div>
                 <div class="vid-info"> <!-- second horizontal layout -->
                     <a href="https://www.youtube.com/watch?v=mP0RAo9SKZk" target="_blank" class="video-title-link">
@@ -128,12 +136,16 @@
 
         <div class="vid-preview">
             <div class="thumbnail-row"> <!-- first vertical layout -->
-                <img src="thumbnails/thumbnail-4.webp" class="thumbnail">
+                <a href="https://www.youtube.com/watch?v=094y1Z2wpJg" target="_blank" class="video-title-link">
+                    <img src="thumbnails/thumbnail-4.webp" class="thumbnail">
+                </a>
                 <div class="vid-time">22:09</div>
             </div>
             <div class="vid-info-grid"> <!-- second vertical layout -->
                 <div class="channel-picture"> <!-- first horizontal layout -->
-                    <img class="profile-picture" src="channel-pictures/channel-4.jpeg">
+                    <a href="https://www.youtube.com/c/veritasium" target="_blank">
+                        <img class="profile-picture" src="channel-pictures/channel-4.jpeg">
+                    </a>
                 </div>
                 <div class="vid-info"> <!-- second horizontal layout -->
                     <a href="https://www.youtube.com/watch?v=094y1Z2wpJg" target="_blank" class="video-title-link">
@@ -153,12 +165,16 @@
 
         <div class="vid-preview">
             <div class="thumbnail-row"> <!-- first vertical layout -->
-                <img src="thumbnails/thumbnail-4.webp" class="thumbnail">
+                <a href="https://www.youtube.com/watch?v=094y1Z2wpJg" target="_blank" class="video-title-link">
+                    <img src="thumbnails/thumbnail-4.webp" class="thumbnail">
+                </a>
                 <div class="vid-time">22:09</div>
             </div>
             <div class="vid-info-grid"> <!-- second vertical layout -->
                 <div class="channel-picture"> <!-- first horizontal layout -->
-                    <img class="profile-picture" src="channel-pictures/channel-4.jpeg">
+                    <a href="https://www.youtube.com/c/veritasium" target="_blank">
+                        <img class="profile-picture" src="channel-pictures/channel-4.jpeg">
+                    </a>
                 </div>
                 <div class="vid-info"> <!-- second horizontal layout -->
                     <a href="https://www.youtube.com/watch?v=094y1Z2wpJg" target="_blank" class="video-title-link">
@@ -178,12 +194,16 @@
 
         <div class="vid-preview">
             <div class="thumbnail-row"> <!-- first vertical layout -->
-                <img src="thumbnails/thumbnail-5.webp" class="thumbnail">
+                <a href="https://www.youtube.com/watch?v=86CQq3pKSUw" target="_blank" class="video-title-link">
+                    <img src="thumbnails/thumbnail-5.webp" class="thumbnail">
+                </a>
                 <div class="vid-time">11:17</div>
             </div>
             <div class="vid-info-grid"> <!-- second vertical layout -->
                 <div class="channel-picture"> <!-- first horizontal layout -->
-                    <img class="profile-picture" src="channel-pictures/channel-5.jpeg">
+                    <a href="https://www.youtube.com/c/CSDojo" target="_blank">
+                        <img class="profile-picture" src="channel-pictures/channel-5.jpeg">
+                    </a>
                 </div>
                 <div class="vid-info"> <!-- second horizontal layout -->
                     <a href="https://www.youtube.com/watch?v=86CQq3pKSUw" target="_blank" class="video-title-link">
@@ -203,12 +223,16 @@
 
         <div class="vid-preview">
             <div class="thumbnail-row"> <!-- first vertical layout -->
-                <img src="thumbnails/thumbnail-6.webp" class="thumbnail">
+                <a href="https://www.youtube.com/watch?v=yXWw0_UfSFg" target="_blank" class="video-title-link">
+                    <img src="thumbnails/thumbnail-6.webp" class="thumbnail">
+                </a>
                 <div class="vid-time">19:59</div>
             </div>
             <div class="vid-info-grid"> <!-- second vertical layout -->
                 <div class="channel-picture"> <!-- first horizontal layout -->
-                    <img class="profile-picture" src="channel-pictures/channel-6.jpeg">
+                    <a href="https://www.youtube.com/@MrBeast" target="_blank">
+                        <img class="profile-picture" src="channel-pictures/channel-6.jpeg">
+                    </a>
                 </div>
                 <div class="vid-info"> <!-- second horizontal layout -->
                     <a href="https://www.youtube.com/watch?v=yXWw0_UfSFg" target="_blank" class="video-title-link">
